--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "type-check": "tsc --project tsconfig.json --pretty --noEmit",
     "lint": "eslint --ext js,jsx,ts,tsx --fix",
+    "prettier": "prettier --write '**/*.ts?(x)'",
     "test": "jest --runInBand",
     "test:watch": "jest --runInBand --watch"
   },
