--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "test:watch": "jest --runInBand --watch"
   },
   "dependencies": {
+    "autoprefixer": "^10.1.0",
     "next": "10.0.4",
+    "postcss": "^8.2.2",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "tailwindcss": "^2.0.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.8",
