--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "test:watch": "jest --runInBand --watch"
   },
   "dependencies": {
+    "@emotion/babel-plugin": "^11.1.2",
+    "@emotion/core": "^11.0.0",
+    "@emotion/react": "^11.1.4",
+    "@emotion/styled": "^11.0.0",
     "autoprefixer": "^10.1.0",
     "next": "10.0.4",
     "postcss": "^8.2.2",
