--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "autoprefixer": "^10.1.0",
     "next": "10.0.4",
     "postcss": "^8.2.2",
+    "postcss-nested": "^5.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "tailwindcss": "^2.0.2"
