--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "postcss-nested": "^5.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-query": "^3.5.9",
     "tailwindcss": "^2.0.2"
   },
   "devDependencies": {
