--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
     "autoprefixer": "^10.1.0",
+    "clsx": "^1.1.1",
     "next": "10.0.4",
     "postcss": "^8.2.2",
     "postcss-nested": "^5.0.3",
