--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "postcss-nested": "^5.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-icons": "^4.1.0",
     "react-query": "^3.5.9",
     "tailwindcss": "^2.0.2"
   },
