--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "autoprefixer": "^10.1.0",
     "clsx": "^1.1.1",
     "next": "10.0.4",
+    "next-themes": "^0.0.10",
     "postcss": "^8.2.2",
     "postcss-nested": "^5.0.3",
     "react": "17.0.1",
