--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "type-check": "tsc --project tsconfig.json --pretty --noEmit",
     "lint": "eslint --ext js,jsx,ts,tsx --fix",
     "prettier": "prettier --write '**/*.ts?(x)'",
-    "test": "jest --runInBand",
-    "test:watch": "jest --runInBand --watch"
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@emotion/babel-plugin": "^11.1.2",
