--- a/package.json
+++ b/package.json
@@ -13,24 +13,21 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@emotion/babel-plugin": "^11.1.2",
-    "@emotion/core": "^11.0.0",
-    "@emotion/react": "^11.1.4",
-    "@emotion/styled": "^11.0.0",
     "@tailwindcss/line-clamp": "^0.1.0",
-    "autoprefixer": "^10.1.0",
+    "autoprefixer": "^10.2.5",
     "clsx": "^1.1.1",
     "next": "10.0.4",
     "next-themes": "^0.0.10",
-    "postcss": "^8.2.2",
-    "postcss-nested": "^5.0.3",
+    "postcss": "^8.2.8",
+    "postcss-nested": "^5.0.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.1.0",
     "react-query": "^3.5.9",
-    "tailwindcss": "^2.0.2"
+    "tailwindcss": "^2.0.4"
   },
   "devDependencies": {
+    "@tailwindcss/jit": "^0.1.17",
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
