--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "type-check": "tsc --project tsconfig.json --pretty --noEmit",
     "lint": "eslint --ext js,jsx,ts,tsx --fix",
     "prettier": "prettier --write '**/*.ts?(x)'",
-    "test": "jest",
-    "test:watch": "jest --watch"
+    "test": "jest --runInBand",
+    "test:watch": "jest --runInBand --watch"
   },
   "dependencies": {
-    "@tailwindcss/line-clamp": "^0.1.0",
+    "@tailwindcss/line-clamp": "^0.2.0",
     "autoprefixer": "^10.2.5",
     "clsx": "^1.1.1",
     "next": "10.0.4",
@@ -28,12 +28,12 @@
   },
   "devDependencies": {
     "@tailwindcss/jit": "^0.1.17",
-    "@testing-library/jest-dom": "^5.11.8",
-    "@testing-library/react": "^11.2.2",
-    "@testing-library/user-event": "^12.6.0",
-    "@types/faker": "^5.1.5",
-    "@types/jest": "^26.0.19",
-    "@types/node": "^14.14.17",
+    "@testing-library/jest-dom": "^5.11.10",
+    "@testing-library/react": "^11.2.6",
+    "@testing-library/user-event": "^13.1.1",
+    "@types/faker": "^5.5.0",
+    "@types/jest": "^26.0.22",
+    "@types/node": "^14.14.37",
     "@types/react": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.11.1",
     "@typescript-eslint/parser": "^4.11.1",
@@ -52,9 +52,10 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "jest-watch-typeahead": "^0.6.1",
-    "lint-staged": "^10.5.3",
-    "msw": "^0.24.4",
+    "lint-staged": "^10.5.4",
+    "msw": "^0.28.0",
     "prettier": "^2.2.1",
+    "ts-jest": "^26.5.4",
     "typescript": "^4.1.3"
   },
   "husky": {
