--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "postinstall": "remix setup node"
   },
   "dependencies": {
+    "@reach/disclosure": "^0.16.2",
     "@remix-run/react": "^1.0.5",
     "@remix-run/vercel": "^1.0.5",
+    "clsx": "^1.1.1",
+    "d3": "^7.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
@@ -21,6 +24,7 @@
   "devDependencies": {
     "@remix-run/dev": "^1.0.5",
     "@remix-run/serve": "^1.0.5",
+    "@types/d3": "^7.1.0",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
     "concurrently": "^6.4.0",
