--- a/package.json
+++ b/package.json
@@ -12,24 +12,25 @@
   },
   "dependencies": {
     "@reach/disclosure": "^0.16.2",
-    "@remix-run/react": "^1.0.6",
-    "@remix-run/vercel": "^1.0.6",
+    "@remix-run/react": "^1.1.1",
+    "@remix-run/vercel": "^1.1.1",
     "clsx": "^1.1.1",
     "d3": "^7.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
-    "remix": "^1.0.6"
+    "remix": "^1.1.1"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.0.6",
-    "@remix-run/serve": "^1.0.6",
+    "@remix-run/dev": "^1.1.1",
+    "@remix-run/serve": "^1.1.1",
     "@types/d3": "^7.1.0",
-    "@types/react": "^17.0.37",
+    "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
-    "concurrently": "^6.4.0",
-    "tailwindcss": "^3.0.1",
-    "typescript": "^4.5.3"
+    "concurrently": "^7.0.0",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.11",
+    "typescript": "^4.5.4"
   },
   "engines": {
     "node": ">=14"
