--- a/package.json
+++ b/package.json
@@ -1,39 +1,36 @@
 {
+  "name": "tonykhaov.com",
+  "version": "0.1.0",
   "private": true,
-  "name": "remix-app-template",
-  "description": "",
-  "license": "",
   "scripts": {
-    "build": "yarn build:css && remix build",
-    "build:css": "tailwindcss -o ./app/tailwind.css",
-    "dev": "concurrently \"npm run dev:css\" \"remix dev\"",
-    "dev:css": "tailwindcss -o ./app/tailwind.css --watch",
-    "postinstall": "remix setup node"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "test": "vitest run",
+    "test:watch": "vitest watch"
   },
   "dependencies": {
-    "@reach/disclosure": "^0.16.2",
-    "@remix-run/react": "^1.1.1",
-    "@remix-run/vercel": "^1.1.1",
-    "clsx": "^1.1.1",
-    "d3": "^7.2.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1",
-    "remix": "^1.1.1"
+    "next": "12.1.6",
+    "react": "18.1.0",
+    "react-dom": "18.1.0"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.1.1",
-    "@remix-run/serve": "^1.1.1",
-    "@types/d3": "^7.1.0",
-    "@types/react": "^17.0.38",
-    "@types/react-dom": "^17.0.11",
-    "concurrently": "^7.0.0",
-    "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.11",
-    "typescript": "^4.5.4"
-  },
-  "engines": {
-    "node": ">=14"
-  },
-  "sideEffects": false
+    "@faker-js/faker": "^7.1.0",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^14.2.0",
+    "@types/node": "17.0.36",
+    "@types/react": "18.0.9",
+    "@types/react-dom": "18.0.5",
+    "autoprefixer": "^10.4.7",
+    "eslint": "8.16.0",
+    "eslint-config-next": "12.1.6",
+    "msw": "^0.42.0",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.0.24",
+    "typescript": "4.7.2",
+    "vitest": "^0.13.0",
+    "whatwg-fetch": "^3.6.2"
+  }
 }
