--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,14 @@
 node_modules
 
-/.cache
 /build
-/api/build
 /public/build
-/app/tailwind.css
+.env
+
+/cypress/screenshots
+/cypress/videos
+/prisma/data.db
+/prisma/data.db-journal
+
+/app/styles/tailwind.css
 
 .DS_Store
-.vercel
